--- a/en/coding/arrays.html
+++ b/en/coding/arrays.html
@@ -33,6 +33,10 @@ $array($index, 10i) = 1
 |s|string|8|
 |v|string|16|
 
+:::warning
+Sanny is very strict about syntax, so don't try to put spaces between the brackets or by the comma, as you would in any programming language.
+:::
+
 Liberty City Stories, Vice City Stories:\
 `<array name>(<index var name>,<size>)`
 
