--- a/es/coding/arrays.html
+++ b/es/coding/arrays.html
@@ -18,7 +18,7 @@ San Andreas:\
 
 ```sb3
 $index = 0
-$array($index, 10i) = 1
+$array($index,10i) = 1
 ```
 
 `<nombre>`: [variable](variables.md) local o global\
@@ -32,7 +32,10 @@ $array($index, 10i) = 1
 |f|número decimal|4|
 |s|cadena corta|8|
 |v|cadena larga|16|
-\
+
+:::warning
+Sanny es muy estricto con la sintaxis, así que no intentes poner espacios entre los corchetes o por la coma, como lo harías en cualquier lenguaje de programación.
+:::
 
 Liberty City Stories, Vice City Stories:\
 `<nombre>(<indice>,<tamaño>)`
