--- a/ru/coding/arrays.html
+++ b/ru/coding/arrays.html
@@ -26,38 +26,16 @@ $array($index, 10i) = 1
 `<размер>`: любое целое число больше 0\
 `<тип>`: одна из букв `i` `f` `s` `v`:
 
-<table>
-<thead>
-<tr>
-<th>Буква</th>
-<th>Тип элемента</th>
-<th>Размер элемента (в байтах)</th>
-</tr>
-</thead>
-<tbody>
-<tr>
-<td>i</td>
-<td>целое число</td>
-<td>4</td>
-</tr>
-<tr>
-<td>f</td>
-<td>дробное число</td>
-<td>4</td>
-</tr>
-<tr>
-<td>s</td>
-<td>строковый литерал</td>
-<td>8</td>
-</tr>
-<tr>
-<td>v</td>
-<td>строковый литерал</td>
-<td>16</td>
-</tr>
-</tbody>
-</table>
+|Буква|Тип элемента|Размер элемента (в байтах)|
+|-|
+|i|целое число|4|
+|f|дробное число|4|
+|s|строковый литерал|8|
+|v|строковый литерал|16|
 
+:::warning
+Санни очень строго относится к синтаксису, поэтому не пытайтесь ставить пробелы между скобками или вокруг запятой, как в любом другом языке программирования.
+:::
 
 Liberty City Stories, Vice City Stories:  
 `<имя массива>(<индекс>,<размер>)`
