--- a/en/scm-documentation/sa_mobile/widget.html
+++ b/en/scm-documentation/sa_mobile/widget.html
@@ -51,23 +51,23 @@ List taken from [GTA Forums](https://gtaforums.com/topic/972564-gta-sa-android-w
 |34|sw|
 |35|\s|
 |36|\s|
-|37|green button|
-|38|power button|
-|39|reset button|
-|40|game analog handle|
-|41|\s|
+|37|green button (pequeño, derecha a la izquierda baja)|
+|38|power button (pequeño, centro a bajo)|
+|39|reset button (pequeño, centro a bajo)|
+|40|game blue analog handle|
+|41|skip cinematic|
 |42|arrow right / left screen|
-|43|arrow up / left screen|
-|44|arrow up / right screen|
-|45|arrow down / right screen|
+|43|arrow up / esquina izquierda inferior screen|
+|44|arrow up / left screen|
+|45|arrow down / left screen|
 |46|arrow up / right screen|
 |47|arrow down / right screen|
 |48|arrow left / right down screen|
 |49|arrow right / right down screen|
 |50|plus / left screen|
-|51|minus / leftscreeen|
-|52|left arrow small|
-|53|right arrow small|
+|51|minus / left screen|
+|52|left arrow / left screen small|
+|53|right arrow / left screen small|
 |54|checkmark|
 |55|man exit arrow|
 |56|rotate left|
@@ -88,19 +88,19 @@ List taken from [GTA Forums](https://gtaforums.com/topic/972564-gta-sa-android-w
 |71|X sign|
 |72|X sign|
 |73|checkmark right (beating)|
-|74|man exit arrow right|
+|74|man exit arrow right down|
 |75|exit text|
-|76|left arrow small|
-|77|right arrow small|
+|76|left arrow white small|
+|77|right arrow white small|
 |78|start text|
 |79|right arrow / bottom right|
-|80|unknow black box |
-|81|unknow black box |
-|82|unknow black box |
-|83|unknow black box |
-|84|\s|
-|85|\s|
-|86|\s|
+|80|black box long|
+|81|black box short|
+|82|black box medium|
+|83|black box tiny 1|
+|84|black box tiny 2|
+|85|black box tiny 3|
+|86|black box tiny 4|
 |87|basket net|
 |88|basket ball|
 |89|X sign / top left|
@@ -116,9 +116,9 @@ List taken from [GTA Forums](https://gtaforums.com/topic/972564-gta-sa-android-w
 |99|left arrow red|
 |100|right arrow green|
 |101|\s|
-|102|man arrow|
-|103|unknow black box|
-|104|unknow black box|
+|102|man arrow arrow right mid|
+|103|black box tiny left top|
+|104|black box tiny right top|
 |106|grove gang recruit|
 |107|grove gang remove member|
 |108|grove gang follow instruction|
@@ -137,11 +137,11 @@ List taken from [GTA Forums](https://gtaforums.com/topic/972564-gta-sa-android-w
 |121|plus right arrow|
 |122|minus left arrow|
 |123|deal button|
-|124|hold button|
-|125|hold button|
-|126|hold button|
-|127|hold button|
-|128|hold button|
+|124|hold button left|
+|125|hold button left center|
+|126|hold button center|
+|127|hold button right center|
+|128|hold button right|
 |129|\s|
 |130|\s|
 |131|\s|
@@ -162,7 +162,7 @@ List taken from [GTA Forums](https://gtaforums.com/topic/972564-gta-sa-android-w
 |146|\s|
 |147|\s|
 |148|\s|
-|149|exit text center|
+|149|exit text center down|
 |150|\s|
 
 
