--- a/en/README.html
+++ b/en/README.html
@@ -25,7 +25,7 @@ Latest versions and updates are always available on [sannybuilder.com](https://s
 
 ## Contacts
 
-[sannybuilder.com](https://sannybuilder.com)\
+[sannybuilder.com](https://sannybuilder.com/)\
 [Sanny Builder @ Twitter](https://twitter.com/SannyBuilderDev)\
 [Sanny Builder @ Facebook](https://facebook.com/SannyBuilder)\
 [Sanny Builder @ GTAForums.com](http://gtaforums.com/index.php?showtopic=211077)
