--- a/en/scm-documentation/sa_mobile/widget.html
+++ b/en/scm-documentation/sa_mobile/widget.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 
-|id|description|icon|
+|ID|Description|GUI|
 |-|
 |0|enter/exit car|![](%sam-w/CarModsAccept.png)|
 |1|punch/weapon fire|![](%sam-w/punch.png)|
