--- a/es/README.html
+++ b/es/README.html
@@ -25,7 +25,7 @@ Las últimas versiones y actualizaciones siempre están disponibles en [sannybui
 
 ## Contactos
 
-[sannybuilder.com](https://sannybuilder.com)\
+[sannybuilder.com](https://sannybuilder.com/)\
 [Sanny Builder @ Twitter](https://twitter.com/SannyBuilderDev)\
 [Sanny Builder @ Facebook](https://facebook.com/SannyBuilder)\
 [Sanny Builder @ GTAForums.com](http://gtaforums.com/index.php?showtopic=211077)
