--- a/es/coding/arrays.html
+++ b/es/coding/arrays.html
@@ -105,7 +105,7 @@ $players[0].Build
 
 :::info
 
-Por predeterminado, en el [modo de edición](../edit-modes/README.md) de `GTA SA`, el desensamblador imprime los elementos del arreglo con los números como índices. La misma función está en LCS y VCS, pero desactivada de forma predeterminada. Puede activar y desactivar esta función mediante la opción de depuración `CONSTANT_INDEXES`.
+Por predeterminado, en el [modo de edición](../edit-modes/) de `GTA SA`, el desensamblador imprime los elementos del arreglo con los números como índices. La misma función está en LCS y VCS, pero desactivada de forma predeterminada. Puede activar y desactivar esta función mediante la opción de depuración `CONSTANT_INDEXES`.
 :::
 
 <script src="../../js/main.min.js"></script>
