--- a/es/edit-modes/README.html
+++ b/es/edit-modes/README.html
@@ -114,7 +114,7 @@ Los archivos `.dat` contienen rutas a otros archivos `.ide`.
 El elemento `ide` puede tener un atributo `base` opcional para especificar una carpeta que se utiliza para resolver rutas relativas en el archivo `.dat`.
 
 ```xml
-&lt;ide base="@game:\">default.dat&lt;/ide>
+<,ide base="@game:\">default.dat<,/ide>
 ```
 
 Sin `base`, todas las rutas relativas se resuelven a partir de la ubicación del archivo `.dat`.
