--- a/ru/edit-modes/README.html
+++ b/ru/edit-modes/README.html
@@ -114,7 +114,7 @@ Sanny Builder поддерживает разные игры и платформ
 Элемент `ide` имеет необязательный атрибут `base`, который задает папку, относительно которой расчитываются пути, определенные внутри `.dat` файла:
 
 ```xml
-<ide base="@game:\">default.dat</ide>
+<,ide base="@game:\">default.dat<,/ide>
 ```
 
 Без `base` все пути расчитываются относительно папки с `.dat` файлом.
