--- a/ru/scm-documentation/sa_mobile/version.html
+++ b/ru/scm-documentation/sa_mobile/version.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
-<html>
+<html lang="ru">
 <head>
-  <title>Game version ID</title>
+  <title>Идентификатор версии игры</title>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -9,7 +9,7 @@
 </head>
 <body>
 :::success
-List taken from [GTA Forums](https://gtaforums.com/topic/948593-opcodes-explanation/?do=findComment&comment=1071100245)
+Список взят с [GTA Forums](https://gtaforums.com/topic/948593-opcodes-explanation/?do=findComment&comment=1071100245)
 :::
 
 ```sb3
