--- a/ru/scm-documentation/sa_mobile/widget.html
+++ b/ru/scm-documentation/sa_mobile/widget.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="ru">
 <head>
   <title>Идентификаторы виджетов</title>
   <meta charset="utf-8">
@@ -9,7 +9,7 @@
 </head>
 <body>
 
-|ID|Описание|Иконка|
+|ID|Описание|GUI|
 |-|
 |0|enter/exit car|![](%sam-w/CarModsAccept.png)|
 |1|punch/weapon fire|![](%sam-w/punch.png)|
