--- a/en/scm-documentation/sa_mobile/version.html
+++ b/en/scm-documentation/sa_mobile/version.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Game version ID</title>
+  <title>Game version IDs</title>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -16,7 +16,7 @@ List taken from [GTA Forums](https://gtaforums.com/topic/948593-opcodes-explanat
 0DD6: 0@ = get_game_version
 ```
 
-|id|description|
+|ID|Description|
 |-|
 |3|1.00|
 |5|1.02|
