--- a/es/scm-documentation/sa_mobile/version.html
+++ b/es/scm-documentation/sa_mobile/version.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
-<html>
+<html lang="es">
 <head>
-  <title>Game version ID</title>
+  <title>Versiones</title>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -9,14 +9,14 @@
 </head>
 <body>
 :::success
-List taken from [GTA Forums](https://gtaforums.com/topic/948593-opcodes-explanation/?do=findComment&comment=1071100245)
+Lista tomada de [GTA Forums](https://gtaforums.com/topic/948593-opcodes-explanation/?do=findComment&comment=1071100245)
 :::
 
 ```sb3
 0DD6: 0@ = get_game_version
 ```
 
-|id|description|
+|ID|Descripción|
 |-|
 |3|1.00|
 |5|1.02|
