--- a/es/scm-documentation/sa_mobile/widget.html
+++ b/es/scm-documentation/sa_mobile/widget.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
-<html>
+<html lang="es">
 <head>
-  <title>Widget IDs</title>
+  <title>Widgets</title>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -9,7 +9,7 @@
 </head>
 <body>
 
-|id|description|icon|
+|ID|Descripción|GUI|
 |-|
 |0|enter/exit car|![](%sam-w/CarModsAccept.png)|
 |1|punch/weapon fire|![](%sam-w/punch.png)|
