--- a/ru/credits.html
+++ b/ru/credits.html
@@ -13,13 +13,13 @@
 
 Автор и разработчик **Sanny Builder** - [Seemann](https://github.com/x87). Проекту также помогали:
 
-Alexander Blade, Barton Waterduck, BG_ASM, Capushon, CyQ, Demarest, JernejL, Hammer83, koPPP, listener, Midnightz, OrionSR, pdescobar, PLPynton, San'OK, Sergey81, spaceeinstein, Silent, wmysterio, XMDS, Y_Less, ZAZ, и многие другие.
+Alexander Blade, Barton Waterduck, BG\_ASM, Capushon, CyQ, Demarest, JernejL, Hammer83, koPPP, listener, MatiDragon, Midnightz, OrionSR, pdescobar, PLPynton, San'OK, Sergey81, spaceeinstein, Silent, Vital, wmysterio, XMDS, Y\_Less, ZAZ, и многие другие.
 
 **Особая благодарность за помощь выражается yelmi и Xieon.**
 
 ## Авторы переводов
 
-Y_Less, tomworld10, -Shadow-Link, Mordecki, Silent, WordsBG, FunGt, Wesser, Mobster, Jost_Vice, Thomazu, Balint, Ridvan and Tuna (RT), MatiDragon, Mega GTAшnik, SHooZ, Yi Yangyijk, VCT team, Alex5526, Marek Simsa, Syping/Hulkkiller, IMasterFX, MINE, wmysterio, forms55, XMDS.
+Y\_Less, tomworld10, -Shadow-Link, Mordecki, Silent, WordsBG, FunGt, Wesser, Mobster, Jost\_Vice, Thomazu, Balint, Ridvan and Tuna (RT), Mega GTA?nik, SHooZ, Yi Yangyijk, VCT team, Alex5526, Marek Simsa, Syping/Hulkkiller, IMasterFX, MINE, MatiDragon, wmysterio, forms55, XMDS, NicusorN5, Sdas50.
 
 ## Программы и компоненты
 
