--- a/en/scm-documentation/ascii-character-codes.html
+++ b/en/scm-documentation/ascii-character-codes.html
@@ -184,3 +184,7 @@
 |ÿ|255|
 
 <script src="../../js/main.min.js"></script>
+<script>
+$('thead tr').innerHTML += '<th>HEX</th>';
+$('tbody tr').forEach(function(tr){tr.innerHTML += '<td>'+String(Number(tr.lastChild.innerHTML).toString(16).padStart (2, "0")).toUpperCase()+'</td>'})
+</script>
