--- a/tr/editor/options/README.html
+++ b/tr/editor/options/README.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="tr">
 <head>
-  <title>Options</title>
+  <title>Ayarlar Hakkında</title>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -9,6 +9,6 @@
 </head>
 <body>
 
-The options window is shown when you press `F10`. This window is divided into five tabs, each of them contains certain kind of settings. By default the [general settings](general.md) tab is open.
+`F10` tuşuna bastığınızda seçenekler penceresi gösterilir. Bu pencere, her biri belirli türde ayarlar içeren beş sekmeye ayrılmıştır. Otomatik olarak [general settings](general.md) ekranı açık olacak.
 
 <script src="../../../js/main.min.js"></script>
