--- a/tr/scm-documentation/gta3/radar-icons.html
+++ b/tr/scm-documentation/gta3/radar-icons.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="tr">
 <head>
-  <title>Radar Icons</title>
+  <title>Radar Ikonları</title>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -12,7 +12,7 @@
 02A7: 0@ = create_icon_marker_and_sphere <,ID> at 892.75 -425.75 13.875
 ```
 
-|ID|Icon|Description|
+|ID|Ikonu|Açıklaması|
 |-|
 |0|![](%gta3-r/dot.png)|Small pink square, unused|
 |1|![](%gta3-r/asuka.png)|Asuka Kasen|
