--- a/tr/scm-documentation/lcs/clothes.html
+++ b/tr/scm-documentation/lcs/clothes.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="tr">
 <head>
-  <title>Player Clothes</title>
+  <title>Oyuncunun Kıyafetleri</title>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -12,7 +12,7 @@
 0357: set_actor $PLAYER_ACTOR skin_to <,ID>
 ```
 
-|ID|Name|
+|ID|İsmi|
 |-|
 |PLR|Leone's suit|
 |PLR2|Lawyer's suit|
