--- a/tr/scm-documentation/vc/gangs.html
+++ b/tr/scm-documentation/vc/gangs.html
@@ -1,23 +1,23 @@
 <!DOCTYPE html>
 <html lang="tr">
 <head>
-  <title>Gang IDs</title>
+  <title>Çete IDleri</title>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" type="text/css" href="../../../style/style.css">
 </head>
 <body>
-|ID|Name|
+|ID|İsimleri|
 |-|
-|0|Cubans|
+|0|Cubanlılar|
 |1|Haitians|
 |2|Street wannabees|
 |3|Columbians (Diaz's)|
 |4|Renta Cops (PIGs)|
 |5|Bikers|
-|6|Vercetti (yours)|
-|7|Golfers|
-|8|Army (special gang)|
+|6|Vercetti (sizin çeteniz)|
+|7|Golfçüler|
+|8|Army (özel bir çeteniz)|
 
 <script src="../../../js/main.min.js"></script>
