--- a/tr/scm-documentation/vc/garages.html
+++ b/tr/scm-documentation/vc/garages.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="tr">
 <head>
-  <title>Garage IDs</title>
+  <title>Garaj IDleri</title>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" type="text/css" href="../../../style/style.css">
 </head>
 <body>
-|ID|Enum|Description|
+|ID|Enum|Açıklaması|
 |-|
 |1|GARAGE_MISSION|Placeholder garage (inactive garage)|
 |2|GARAGE_BOMBSHOP1|Bomb shop with timed detonator|
