--- a/tr/scm-documentation/vc/interiors.html
+++ b/tr/scm-documentation/vc/interiors.html
@@ -1,32 +1,32 @@
 <!DOCTYPE html>
 <html lang="tr">
 <head>
-  <title>Interiors</title>
+  <title>Bina İçleri</title>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" type="text/css" href="../../../style/style.css">
 </head>
 <body>
-|ID|Description|
+|ID|Açıklaması|
 |-|
-|0|outside|
+|0|dışarısı (Vice City'nin tamamı)|
 |1|hotel|
-|2|mansion|
-|3|bank|
-|4|mall|
-|5|stripclub|
-|6|lawyers|
+|2|malikane|
+|3|banka|
+|4|alışveriş merkezi|
+|5|striptiz kulübü|
+|6|ken'in ofisi|
 |7|cafe robina|
-|8|concert|
-|9|studio|
-|10|shooting range|
-|11|apartment/bikerbar|
-|12|policeHQ|
-|14|stadium1|
-|15|stadium2|
-|16|stadium3|
-|17|Malibu club|
-|18|Print Works|
+|8|konser alanı|
+|9|stüdyo|
+|10|poligon/silah talimi|
+|11|apartmant/motorcu barı|
+|12|police merkezi|
+|14|stadyum1|
+|15|stadyum2|
+|16|stadyum3|
+|17|Malibu Kulübü|
+|18|Print Works şirketi|
 
 <script src="../../../js/main.min.js"></script>
