--- a/tr/scm-documentation/vc/pedtypes.html
+++ b/tr/scm-documentation/vc/pedtypes.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="tr">
 <head>
-  <title>Ped Types</title>
+  <title>Vatandaş Türleri</title>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -12,7 +12,7 @@
 009A: 0@ = create_actor <,id> 0 at 0 0 0
 ```
 
-|ID|Type|
+|ID|Tür|
 |-|
 |0|player1|
 |1|player2|
