--- a/tr/scm-documentation/vc/radar-icons.html
+++ b/tr/scm-documentation/vc/radar-icons.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="tr">
 <head>
-  <title>Radar Icons</title>
+  <title>Radar Ikonu</title>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" type="text/css" href="../../../style/style.css">
 </head>
 <body>
-|ID|Icon|Description|
+|ID|Ikon|Açıklaması|
 |-|
 |0|![](%vc-r/dot.gif)|Small pink square|
 |1|![](%vc-r/radar_centre.gif)|Player position|
