--- a/tr/scm-documentation/vcs/gangs.html
+++ b/tr/scm-documentation/vcs/gangs.html
@@ -1,23 +1,23 @@
 <!DOCTYPE html>
 <html lang="tr">
 <head>
-  <title>Gang IDs</title>
+  <title>Çete IDleri</title>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" type="text/css" href="../../../style/style.css">
 </head>
 <body>
-|ID|Name|
+|ID|İsimler|
 |-|
-|0|Umberto's guys|
-|1|Cholos|
-|2|Sharks|
-|3|Army|
-|4|Security|
-|5|Bikers|
-|6|Vance gang|
-|7|Golfer|
-|8|Marty's|
+|0|Umberto'nun Adamları|
+|1|Chololar|
+|2|Sharklar|
+|3|Ordu|
+|4|Güvenlik|
+|5|Motorcular|
+|6|Vance Ailesi Çetesi||
+|7|Golfçüler|
+|8|Marty'nin Adamları|
 
 <script src="../../../js/main.min.js"></script>
