--- a/tr/scm-documentation/vcs/weather.html
+++ b/tr/scm-documentation/vcs/weather.html
@@ -1,22 +1,22 @@
 <!DOCTYPE html>
 <html lang="tr">
 <head>
-  <title>Weather IDs</title>
+  <title>Hava Durumu IDleri</title>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" type="text/css" href="../../../style/style.css">
 </head>
 <body>
-|ID|Description|
+|ID|İsim|
 |-|
-|0|Sunny|
-|1|Cloudy|
-|2|Rainy|
-|3|Foggy|
-|4|Extra sunny|
-|5|Hurricane|
-|6|Extra colors|
-|7|Ultra sunny|
+|0|Güneşli|
+|1|Bulutlu|
+|2|Yağmurlu|
+|3|Sisli|
+|4|Ekstra Güneşli|
+|5|Sağanak Yağmurlu|
+|6|Ekstra (Bilinmeyen) renkler|
+|7|Ultra Güneşli|
 
 <script src="../../../js/main.min.js"></script>
