--- a/tr/editor/hotkeys.html
+++ b/tr/editor/hotkeys.html
@@ -1,60 +1,60 @@
 <!DOCTYPE html>
 <html lang="tr">
 <head>
-  <title>Hotkeys</title>
+  <title>Tuş Kısayolları</title>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" type="text/css" href="../../style/style.css">
 </head>
 <body>
-Sanny Builder supports many common shortcuts for the file and text operations (`Ctrl+N`, `Ctrl+Z`, etc) as well as some custom ones.  Hotkeys marked with `*` are [customizable](options/hotkeys.md).
+Sanny Builder birçok tuş kısayolunu destekliyor (`Ctrl+N`, `Ctrl+Z`, etc) tabi ki kendine özel kısayolları da var.  Bu `*` ile işaretlenmiş olan ve herzaman değiştirilebilir olan kısayollardır. [customizable](options/hotkeys.md).
 
-|Key/Combo|Operation|
+|Kısayol / Tuş Kombinasyonu|Yaptığı Olay|
 |-|
-|**Main Menu**|\s|
-|`F5` *|open a file as a script and disassemble|
-|`F6` *|compile the editor content to a script file|
-|`F7` *|compile the editor content to a script file and copy it to the game's scripts directory|
-|`F8` *|run the game for the current [edit mode](../../edit-modes/README.md)|
-|`F10`|open the [options](options/README.md) window|
-|`F12`|open the documentation|
-|**Text**|\s|
-|`TAB`, `Shift`+`TAB`|indent the selected text to the left / right (tab)|
-|`Ctrl`+`Alt`+`A`\n`Ctrl`+`Alt`+`D`|indent the selected text to the left / right (by one character)|
-|`Ctrl`+`Alt`+`B`\n`Ctrl`+`Alt`+`N`\n`Ctrl`+`Alt`+`M`|toggle different modes of the text selection: Normal, Columnar (same as selection with pressed `Alt`), Lines|
-|`Ctrl`+`Shift`+`U`\n`Ctrl`+`Shift`+`L`|convert the word to uppercase / lowercase|
-|`Ctrl`+`+`|increase the text size (zoom in)|
-|`Ctrl`+`-`|decrease the text size (zoom out)|
-|`Ctrl`+`T`|delete the word under the cursor|
-|`Ctrl`+`Y`|delete the line|
-|`Ctrl`+`Shift`+`Y`|clear the line|
-|`Ctrl`+`Q` *|[comment / uncomment](../coding/comments.md) the line|
-|**Navigation**|\s|
-|`Ctrl`+`Shift`+`B`|jump between brackets: `{}`, `()`, `<>`, `[]`|
-|`Ctrl`+`Up/Down`|scroll the page one line up / down|
-|`Ctrl`+`Mouse Wheel Up/Down`|page up / down|
-|`Ctrl`+`Shift`+`0..9`|toggle a [bookmark](features.md#bookmarks-quick-jump) on the line|
-|`Ctrl`+`0..9`|navigate to line with the [bookmark](features.md#bookmarks-quick-jump)|
-|`Ctrl`+`G` *|go to the line|
-|`Alt`+`Right` *|[navigate to symbol](features.md#navigate-to-symbol) under the cursor (a label, mission or function)|
-|`Alt`+`Left` *|navigate back to the previous position (where [Navigate to Symbol](features.md#navigate-to-symbol) was called)|
-|`Ctrl`+`Enter`|open a file which name is under the cursor (see also [relative path priorities](../coding/directives.md#usdinclude))|
-|**Code**|\s|
-|`Ctrl`+`Space`|show the list of classes / class members / models / labels / variables / missions|
-|`Ctrl`+`Shift`+`Space`|show the list of parameters for the current class command|
-|`Ctrl`+`Shift`+`C` *|insert the [player's coordinates](features.md#player-coordinates-management)|
-|`Ctrl`+`Shift`+`E` *|insert the [player's z_angle](features.md#player-coordinates-management)|
-|`F1`|find an opcode with the word under the cursor (with ignoring of `_` and `.`)|
-|`Ctrl`+`F1`|find an opcode with the word under the cursor (without ignoring of `_` and `.`)|
-|`F2`|use the word under the cursor to expand to the [code template](../../edit-modes/code-templates.md) with the same name|
-|`Ctrl`+`J`|show the list of [code templates](../../edit-modes/code-templates.md)|
-|`Ctrl`+`M`|start/stop recording of a [macro](features.md#keypress-recording-macro) (keystroke pressings sequence)|
-|`Ctrl`+`P`|replay [macro](features.md#keypress-recording-macro)/pause while processing|
-|`Ctrl`+`H` *|convert the number under the cursor from decimal to hexadecimal and vice versa|
-|[CtrlAltH][]`Ctrl`+`Alt`+`H` *|convert the model name under the cursor to its numeric ID and vice versa|
-|**Misc**|\s|
-|`Ctrl`+`~`|open [console](console.md)|
-|`Alt`+`S`|(when the list of models is active) re-sort the list|
+|**Ana Menu**|\s|
+|`F5` *|bir dosyayı komut dosyası olarak açar ve parçalarına ayırır|
+|`F6` *|editör içeriğini bir betik dosyasına derler|
+|`F7` *|editör içeriğini bir betik dosyasında derler ve oyunun betik dizinine kopyalar|
+|`F8` *| Şuanki [edit mode](../../edit-modes/README.md) ayarında olan hedef oyunu açar.|
+|`F10`| Ayarlar kısmındaki [options](options/README.md) ekranını açar. Bu ekranı yani...|
+|`F12`|belgeleri açar|
+|**Yazı olarak**|\s|
+|`TAB`, `Shift`+`TAB`|seçilen metni sola / sağa girintiler (sekme)|
+|`Ctrl`+`Alt`+`A`\n`Ctrl`+`Alt`+`D`|seçilen metni sola / sağa girinti (bir karakteri olarak)|
+|`Ctrl`+`Alt`+`B`\n`Ctrl`+`Alt`+`N`\n`Ctrl`+`Alt`+`M`|metin seçiminin farklı modları arasında geçiş yapar: Normal, Sütunlu (`Alt` tuşuna basılan seçimle aynı), Çizgiler|
+|`Ctrl`+`Shift`+`U`\n`Ctrl`+`Shift`+`L`|kelimeyi büyük / küçük harfe dönüştürür|
+|`Ctrl`+`+`|metin boyutunu büyütür (yakınlaştırır)|
+|`Ctrl`+`-`|metin boyutunu küçültür (uzaklaştırır)|
+|`Ctrl`+`T`|imlecin altındaki kelimeyi siler|
+|`Ctrl`+`Y`|satırı siler|
+|`Ctrl`+`Shift`+`Y`|çizgiyi temizler|
+|`Ctrl`+`Q` *|cümleye [comment / uncomment](../coding/comments.md) ekler|
+|**Ulaşım için**|\s|
+|`Ctrl`+`Shift`+`B`|parantezler arasında atlar: `{}`, `()`, `<>`, `[]`|
+|`Ctrl`+`Up/Down`|sayfayı bir satır yukarı/aşağı kaydırır|
+|`Ctrl`+`Mouse Wheel Up/Down`|sayfa yukarı / aşağı|
+|`Ctrl`+`Shift`+`0..9`|Satır üzerinde bir [bookmark](features.md#bookmarks-quick-jump) işareti koyar|
+|`Ctrl`+`0..9`|[bookmark](features.md#bookmarks-quick-jump) işaretleri arasında geçişler için|
+|`Ctrl`+`G` *|satıra gitmek için|
+|`Alt`+`Right` *|[navigate to symbol](features.md#navigate-to-symbol) imlecin altında (bir etiket, görev veya işlev)|
+|`Alt`+`Left` *|önceki konuma geri gider (Yani [Navigate to Symbol](features.md#navigate-to-symbol) olayının bahsedildiği)|
+|`Ctrl`+`Enter`|imlecin altında adı olan bir dosyayı açar (Ayrıca bakınız: [relative path priorities](../coding/directives.md#usdinclude))|
+|**Kod yazarken**|\s|
+|`Ctrl`+`Space`|sınıfların / sınıf üyelerinin / modellerin / etiketlerin / değişkenlerin / görevlerin listesini gösterir|
+|`Ctrl`+`Shift`+`Space`|geçerli sınıf komutu için parametre listesini gösterir|
+|`Ctrl`+`Shift`+`C` *|[player's coordinates](features.md#player-coordinates-management) lokasyonunu yapıştırır|
+|`Ctrl`+`Shift`+`E` *|[player's z_angle](features.md#player-coordinates-management) yönünü yapıştırır|
+|`F1`|imlecin altındaki kelime ile bir işlem kodu bulur (Tabiki bunları pas geçer: `_` ve `.`)|
+|`Ctrl`+`F1`|imlecin altındaki kelime ile bir işlem kodu bulur (Bunları pas geçmeden: `_` ve `.`)|
+|`F2`|genişletmek için imlecin altındaki sözcüğü kullanır. [code template](../../edit-modes/code-templates.md) aynı isme sahiptir|
+|`Ctrl`+`J`|[code templates](../../edit-modes/code-templates.md) listesini gösterir|
+|`Ctrl`+`M`|[macro](features.md#keypress-recording-macro) kaydını başlatır/durdurur (tuş vuruşları dizisi)|
+|`Ctrl`+`P`|[macro](features.md#keypress-recording-macro)işlenirken tekrarlar/duraklatılır|
+|`Ctrl`+`H` *|imlecin altındaki sayıyı ondalıktan onaltılıya ve tersi şekilde dönüştürür|
+|[CtrlAltH][]`Ctrl`+`Alt`+`H` *|imlecin altındaki model adını sayısal kimliğine dönüştürür ve bunun tersi de geçerlidir|
+|**Çeşitli**|\s|
+|`Ctrl`+`~`|[console](console.md)'u açar.|
+|`Alt`+`S`|(model listesi aktif olduğunda) listeyi yeniden sıralar|
 
 <script src="../../js/main.min.js"></script>
