--- a/tr/editor/language-service.html
+++ b/tr/editor/language-service.html
@@ -9,9 +9,9 @@
 </head>
 <body>
 
-**Language service** is one of the Sanny Builder features providing rich developer experience. It's responsible for continuous mining data out of the opened document and all imported files. It's important to know that the mining works in a separate thread and does not immediately reflect what you've just typed. There could be a noticeable delay while the language service reacts on a document change. If, for some reason, it distracts you, or you're not satisfied with the service performance you can disable it in the [options](options/editor.md#editor-configuration).
+**Dil Yardımı** zengin geliştirici deneyimi sağlayan Sanny Builder özelliklerinden biridir. Açılan belgeden ve içe aktarılan tüm dosyalardan sürekli veri madenciliği yapmaktan sorumludur. Madenciliğin ayrı bir iş parçacığında çalıştığını ve az önce yazdıklarınızı hemen yansıtmadığını bilmek önemlidir. Dil hizmeti bir belge değişikliğine tepki verirken gözle görülür bir gecikme olabilir. Herhangi bir nedenle dikkatinizi dağıtırsa veya hizmet performansından memnun kalmazsanız, onu devre dışı bırakabilirsiniz. [options](options/editor.md#editor-configuration).
 
-For better responsiveness the language service only scans a slice of the current document prior to the active line, not the entire file. This is controlled by the [Scanning range](options/editor.md#code-scan-distance) value set in the Editor options. The higher the value the more lines the service scans and the more symbols it finds, but it also increases the time that is necessary for the editor to reflect the changes made in the document. If you have a less powerful workstation consider using the default value of `250` lines.
+Daha iyi yanıt verebilmek için dil hizmeti, tüm dosyayı değil, etkin satırdan önce geçerli belgenin yalnızca bir dilimini tarar. Bu tarafından kontrol edilir [Scanning range](options/editor.md#code-scan-distance) Düzenleyici seçeneklerinde ayarlanan değer. Değer ne kadar yüksek olursa, hizmet o kadar çok satır tarar ve o kadar çok sembol bulur, ancak aynı zamanda düzenleyicinin belgede yapılan değişiklikleri yansıtması için gereken süreyi de artırır. Daha az güçlü bir iş istasyonunuz varsa varsayılan `250` satır değerini kullanmayı düşünün.
 
 Since v3.7.0 the language service is capable of finding [defined constants](../coding/constants.md#syntax) and their values. This information then becomes available to the editor for [highlighting purposes](options/editor.md#color-theme) and for [displaying values](features.md#displaying-information-about-opcode) of constants.
 
@@ -20,23 +20,23 @@ const
     x = 10
 end
 
-x // x gets highlighted
+x // x değişkenini kullanınca otomatik olarak aydınlanacak yazılım boyunca.
 ```
 
-The syntax highlighter offers two ways of colorizing constants:
+Sözdizimi vurgulayıcı, sabitleri renklendirmek için iki yol sunar:
 
-* highlight all constants using the same set of rules
-* apply the rules that would otherwise be applied to the constant value ("semantic highlighting")
+* aynı kural setini kullanarak tüm sabitleri vurgula
+* aksi takdirde sabit değere uygulanacak kuralları uygula ("anlamsal vurgulama")
 
-With semantic highlighting enabled and given the example above `x` would get colorized as a regular number (the maroon color by default).
+Anlamsal vurgulama etkinleştirildiğinde ve yukarıdaki `x` örneği verildiğinde, normal bir sayı olarak renklendirilir (varsayılan olarak kestane rengi).
 
-The language service also serves as the data provider for the autocomplete feature when you press `Ctrl+Space`. It renders a list of constants and their values. When the language service is disabled, no constants are being displayed in the list.
+Dil hizmeti aynı zamanda `Ctrl+Space` tuşlarına bastığınızda otomatik tamamlama özelliği için veri sağlayıcı görevi görür. Sabitlerin ve değerlerinin bir listesini oluşturur. Dil hizmeti devre dışı bırakıldığında, listede hiçbir sabit görüntülenmez.
 
 :::info
-Read more technical details on the service implementation there:
+Dil Desteği uygulamasıyla ilgili daha fazla teknik ayrıntıyı buradan okuyun:
 
-* [Notes on constants highlighting. Part 1/2](https://www.patreon.com/posts/45844911)
-* [Notes on constants highlighting. Part 2/2](https://www.patreon.com/posts/46873773)
+* [Vurgulanan sabitler hakkında notlar. Bölüm 1/2](https://www.patreon.com/posts/45844911)
+* [Vurgulanan sabitler hakkında notlar. Bölüm 2/2](https://www.patreon.com/posts/46873773)
 :::
 
 <script src="../../js/main.min.js"></script>
