--- a/tr/scm-documentation/lcs/models.html
+++ b/tr/scm-documentation/lcs/models.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="tr">
 <head>
-  <title>Model IDs</title>
+  <title>Model IDleri</title>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" type="text/css" href="../../../style/style.css">
 </head>
 <body>
-|ID|Name|
+|ID|İsmi|
 |-|
 |0|PLAYER|
 |1|COP|
