--- a/tr/scm-documentation/lcs/special-actors.html
+++ b/tr/scm-documentation/lcs/special-actors.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="tr">
 <head>
-  <title>Special Actors</title>
+  <title>Özel Aktörler</title>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -12,7 +12,7 @@
 0241: load_special_actor 1 <,ID>
 ```
 
-|ID|Description|
+|ID|Açıklaması|
 |-|
 |AVERY|Avery Carrington|
 |BABY|Giovanni Casa (baby)|
