--- a/tr/scm-documentation/lcs/weapons.html
+++ b/tr/scm-documentation/lcs/weapons.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="tr">
 <head>
-  <title>Weapon IDs</title>
+  <title>Silah IDleri</title>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -12,7 +12,7 @@
 01B6: give_player $PLAYER_CHAR weapon <,ID> ammo 1
 ```
 
-|Weapon ID|Model ID|Name|
+|Silah IDsi|Model IDsi|İsmi|
 |-|
 |0|\s|Unarmed|
 |1|259|\s|
