--- a/tr/scm-documentation/vc/buttons.html
+++ b/tr/scm-documentation/vc/buttons.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="tr">
 <head>
-  <title>Button IDs</title>
+  <title>Buton IDleri</title>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -12,7 +12,7 @@
 00E1: key_pressed 0 <,button>
 ```
 
-|Button|Enum|On foot|In a vehicle|
+|Tuş İsmi|Enum|Yaya iken|Araba İçindekiler|
 |-|
 |0|LEFTSTICKX|Left / Right|Steer Left / Right|
 |1|LEFTSTICKY|Forward / Backwards|Steer Forward / Backward|
