--- a/tr/scm-documentation/vc/weapons.html
+++ b/tr/scm-documentation/vc/weapons.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="tr">
 <head>
-  <title>Weapon IDs</title>
+  <title>Silah IDleri</title>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -12,7 +12,7 @@
 04B8: get_char_weapon <,char> in_slot_id <,slot> type_to <,type> ammo_to <,ammo> model_to <,model> 
 ```
 
-|Type|Slot|Name|Model|Icon|
+|Tür|Envanterdeki Yeri (Grubu)|İsmi|Modeli|Ikonu|
 |-|
 |0|1|Unarmed|\s|![](%vc-w/fist.gif)|
 |1|1|Brass Knuckles|#brassknuckle|![](%vc-w/brassknuckle.gif)|
