--- a/tr/scm-documentation/vcs/clothes.html
+++ b/tr/scm-documentation/vcs/clothes.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="tr">
 <head>
-  <title>Player Clothes</title>
+  <title>Oyuncunun Kıyafetleri</title>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" type="text/css" href="../../../style/style.css">
 </head>
 <body>
-|ID|Name|
+|ID|İsim|
 |-|
 |OUT_F1|Army Fatigues|
 |OUT_F2|Casuals|
